--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 3000
 DB_CONNECTION = mysql
-DB_HOST = dpg-cn7scq6g1b2c73epp2m0-a
+DB_HOST = localhost
 DB_PORT = 5432
 DB_DATABASE = prueba_hwpa
 DB_USERNAME = root
-DB_PASSWORD = 6LokC5sx2h3fgOsQyByT63EBuGaL4Nii
+DB_PASSWORD = 
 TOKEN_KEY=secret
