--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT = 3000
 DB_CONNECTION = mysql
 DB_HOST = localhost
 DB_PORT = 5432
-DB_DATABASE = prueba_hwpa
+DB_DATABASE = pelicula_backend
 DB_USERNAME = root
 DB_PASSWORD = 
 TOKEN_KEY=secret
