--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fs-extra": "^11.1.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
-    "sequelize": "^6.29.0"
+    "sequelize": "file:"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
