--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 3000
 DB_CONNECTION = mysql
-DB_HOST = localhost
-DB_PORT = 5432
-DB_DATABASE = pelicula_backend
+DB_HOST = tramway.proxy.rlwy.net
+DB_PORT = 57530
+DB_DATABASE = railway
 DB_USERNAME = root
-DB_PASSWORD = 
+DB_PASSWORD = KSpTQEanKNleyvmQpwinEcLKndTBTFhQ
 TOKEN_KEY=secret
